# Pacman

./: CMakeLists.txt  PROPOSAL.md  README.md
src/: controller.cxx  controller.hxx  model.cxx  model.hxx  view.cxx  view.hxx
test/: model_test.cxx
